--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -23,7 +23,13 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^9.4.3",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.16.1",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^7.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
